improved check_results

--- a/analysis/plot_sed.ipynb
+++ b/analysis/plot_sed.ipynb
@@ -7,22 +7,9 @@
    "outputs": [],
    "source": [
     "# Import necessary libraries and modules\n",
-    "import numpy as np\n",
     "from gammapy.datasets import MapDataset\n",
-    "from gammapy.estimators import ExcessMapEstimator, FluxPoints\n",
-    "from gammapy.modeling import Fit\n",
-    "from gammapy.modeling.models import (\n",
-    "    PowerLawSpectralModel,\n",
-    "    BrokenPowerLawSpectralModel,\n",
-    "    ExpCutoffPowerLawSpectralModel,\n",
-    "    LogParabolaSpectralModel,\n",
-    "    TemplateSpectralModel,\n",
-    "    SkyModel,\n",
-    "    DiskSpatialModel,\n",
-    "    GaussianSpatialModel,\n",
-    "    FoVBackgroundModel,\n",
-    "    Models,\n",
-    ")\n",
+    "from gammapy.estimators import FluxPoints\n",
+    "from gammapy.modeling.models import Models\n",
     "import astropy.units as u\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
