checking results adapted to new models

--- a/analysis/check_results.ipynb
+++ b/analysis/check_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,43 +35,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00_template_fitted\n",
+      "01_pl_disk_center_fixed_fitted\n",
+      "02_pl_gauss_center_fixed_fitted\n",
+      "03_ecpl_disk_center_fixed_fitted\n",
+      "04_ecpl_gauss_center_fixed_fitted\n",
+      "05_lp_disk_center_fixed_fitted\n",
+      "06_lp_gauss_center_fixed_fitted\n",
+      "07_bpl_disk_center_fixed_fitted\n",
+      "08_bpl_gauss_center_fixed_fitted\n",
+      "09_pl_disk_center_free_fitted\n",
+      "10_pl_gauss_center_free_fitted\n",
+      "11_ecpl_disk_center_free_fitted\n",
+      "12_ecpl_gauss_center_free_fitted\n",
+      "13_lp_disk_center_free_fitted\n",
+      "14_lp_gauss_center_free_fitted\n",
+      "15_bpl_disk_center_free_fitted\n",
+      "16_bpl_gauss_center_free_fitted\n",
+      "nullhypothesis_fitted\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate through the JSON files in the folder\n",
     "paths = list(jsons_path.rglob(\"*.json\"))\n",
     "paths.sort()\n",
     "for file_path in paths:\n",
     "    # Define the name of the source\n",
-    "    if file_path.with_suffix('').name == 'nullhypothesis':\n",
-    "        model_name = None\n",
-    "    elif file_path.with_suffix('').name == '00_template':\n",
+    "    if file_path.with_suffix('').name == '00_template_fitted':\n",
     "        model_name = ['fermi bubble']\n",
     "    else:\n",
     "        model_name = ['cygnus_diffuse']\n",
     "    # Load the JSON data from the file\n",
-    "        with file_path.open('r') as file:\n",
-    "            data = json.load(file)\n",
-    "            name = list(data.keys())[0]\n",
-    "            if file_path.with_suffix('').name == 'nullhypothesis_fitted':\n",
-    "                L0 = data[name]['Nullhypothesis']['result'][-1]\n",
-    "            else:\n",
-    "                # Extract the relevant data\n",
-    "                success = data[name][model_name[0]]['result'][0]\n",
-    "                value = data[name][model_name[0]]['result'][-1]\n",
+    "    with file_path.open('r') as file:\n",
+    "        data = json.load(file)\n",
+    "        name = list(data.keys())[0]\n",
+    "        if file_path.with_suffix('').name == 'nullhypothesis_fitted':\n",
+    "            L0 = data[name]['Nullhypothesis']['result'][-1]\n",
+    "        else:\n",
+    "            # Extract the relevant data\n",
+    "            success = data[name][model_name[0]]['result'][0]\n",
+    "            value = data[name][model_name[0]]['result'][-1]\n",
     "\n",
-    "                # Append the data to the lists\n",
-    "                names.append(name)\n",
-    "                successes.append(success)\n",
-    "                values.append(value)\n",
+    "            # Append the data to the lists\n",
+    "            names.append(name)\n",
+    "            successes.append(success)\n",
+    "            values.append(value)\n",
     "\n",
     "TS = [L0 - L1 for L1 in values]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/results/multi_models/strategy_1/tol_0.1/no_diffuse/all_IDs_ene_0.7_100_bin_20_binsz_0.02/jsons/nullhypothesis_fitted.json\n",
+      "{'nullhypothesis_fitted': {'Nullhypothesis': {'models': ['Nullhypothesis', 'Nullhypothesis', 'dataset_all_IDs_ene_0.7_100_bin_20_binsz_0.02.fits.gz'], 'result': [True, 'Optimization terminated successfully.', 9325214.230184287]}}}\n",
+      "nullhypothesis_fitted\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(file_path)\n",
+    "with file_path.open('r') as file:\n",
+    "            data = json.load(file)\n",
+    "            name = list(data.keys())[0]\n",
+    "print(data)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
