--- a/analysis/single_model_results.ipynb
+++ b/analysis/single_model_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,27 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / WCS for this file \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n",
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / WCS for this file \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n",
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / WCS for this file \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n",
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / WCS for this file \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb Cell 3\u001b[0m line \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m path_to_fit_models \u001b[39m=\u001b[39m path_to_results \u001b[39m/\u001b[39m \u001b[39m'\u001b[39m\u001b[39msingle_model\u001b[39m\u001b[39m'\u001b[39m \u001b[39m/\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mstrategy_\u001b[39m\u001b[39m{\u001b[39;00mstrategy\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m/\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtol_\u001b[39m\u001b[39m{\u001b[39;00mtol\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m/\u001b[39m diffuse \u001b[39m/\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfile_name\u001b[39m}\u001b[39;00m\u001b[39m_ene_\u001b[39m\u001b[39m{\u001b[39;00me_min\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00me_max\u001b[39m}\u001b[39;00m\u001b[39m_bin_\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mbin\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m_binsz_\u001b[39m\u001b[39m{\u001b[39;00mbinsz\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m/\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mmodels\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m path \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(path_to_fit_models\u001b[39m.\u001b[39mrglob(\u001b[39m\"\u001b[39m\u001b[39m08*.yaml\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m models_fit \u001b[39m=\u001b[39m Models\u001b[39m.\u001b[39mread(path[\u001b[39m0\u001b[39;49m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Set the loaded model as the source model in the dataset\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/Analysis/GAMMAPY/DiffuseEmission/analysis/single_model_results.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m dataset\u001b[39m.\u001b[39mmodels \u001b[39m=\u001b[39m models_fit\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "# Load the fitted model from the YAML file\n",
-    "path_to_fit_models = path_to_results / 'single_model' / f'strategy_{strategy}' / f'tol_{tol}' / diffuse / f\"{file_name}_ene_{e_min}_{e_max}_bin_{bin}_binsz_{binsz}\" / \"models\"\n",
+    "path_to_fit_models = path_to_results / 'multi_models' / f'strategy_{strategy}' / f'tol_{tol}' / diffuse / f\"{file_name}_ene_{e_min}_{e_max}_bin_{bin}_binsz_{binsz}\" / \"models\"\n",
     "path = list(path_to_fit_models.rglob(\"08*.yaml\"))\n",
     "models_fit = Models.read(path[0])\n",
     "\n",
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,18 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_result_fluxpoints = path_to_fluxdatapoints / 'single_model' / f'strategy_{strategy}' / f'tol_{tol}' / diffuse / f\"{file_name}_ene_{e_min}_{e_max}_bin_{bin}_binsz_{binsz}\"\n",
     "filename = path_to_result_fluxpoints / f\"{path[0].with_suffix('').name}.fits\"\n",
-    "diffuse_flux_points = FluxPoints.read(filename)"
+    "diffuse_flux_points = FluxPoints.read(filename)\n",
+    "\n",
+    "template = path_to_result_fluxpoints / \"00_template_fitted.fits\"\n",
+    "template_flux_points = FluxPoints.read(template)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
     "ax = fermi_template.plot(**plot_kwargs, label=\"real-model_fermi-bubble\")\n",
     "\n",
     "#plot flux data points\n",
-    "#diffuse_flux_points.plot(ax=ax, sed_type=\"e2dnde\", label=\"Real Model\")\n",
+    "template_flux_points.plot(ax=ax, sed_type=\"e2dnde\", label=\"Real Model\")\n",
     "diffuse_flux_points.plot(ax=ax, sed_type=\"e2dnde\",label=\"Diffuse Model\")\n",
     "\n",
     "ax.set_ylim([1.e-14, 5.e-10])\n",
