new corrected maps

--- a/datasets/plot_dataset.ipynb
+++ b/datasets/plot_dataset.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Define the name of the dataset file\n",
-    "IDs = 'all_IDs'\n",
+    "IDs = 'diffuse'\n",
     "e_min = 1\n",
     "e_max = 200\n",
     "bin = 20\n",
